--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/jest": "^27.0.3",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "async-validator": "^4.0.7",
     "babel-jest": "^26.6.3",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
+    "mitt": "^3.0.0",
     "sass": "^1.45.1",
     "ts-jest": "^26.5.6",
     "typescript": "^4.4.4",
